Added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,41 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>The head contains info for the webpage but not the end user</li>
+          <li>The body is what the end user is able to see and interact with</li>
+          <li>Each element starts and ends with the same keyword</li>
+        </ul>
+
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Git is a version control tool that enables you to have a main code that you push other branches of code to</li>
+          <li>The use case in this bootcamp will be for collaborative work</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+   
+      </section>
     </main>
 
     <footer>
