added CSS to the project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -15,7 +16,6 @@
       <section class="card" id="html-section">
         <h2>HTML</h2>
         <ul>
-          <li>Enter your HTML notes here</li>
           <li>The head contains info for the webpage but not the end user</li>
           <li>The body is what the end user is able to see and interact with</li>
           <li>Each element starts and ends with the same keyword</li>
@@ -26,7 +26,9 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li>CSS allows you to style each element in an HTML file</li>
+          <li>Link the external CSS to the HTML in the head section</li>
+          <li>Margin and padding do the same thing but for different parts of the element</li>
         </ul>
    
       </section>
