Added more notes to js and implemented functions to the code

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -46,7 +46,8 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>Inspecting the page and working in the console helps you test and debug your code</li>
+          <li>variables are assigned with 'var' and functions with 'function'</li>
         </ul>
    
       </section>
